--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ build: off
 build_script:
   - "ant"
   - "bin\\buck build buck"
+  - "bin\\buck build test/... "
 
 test_script:
   - "bin\\buck test -v 5 --all --test-selectors=':windows_failures.txt' --test-selectors=':windows_cxx_support.txt'"
