[Travis] Update Travis Ubuntu image.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ env:
   - CI_ACTION=heavy_integration
   - CI_ACTION=ant
 
-# Force Ubuntu 12.04 to support old dependencies
-# TODO(ttsugrii): upgrade to trusty once all deps are fixed
-dist: precise
+dist: trusty
 
 # Enable container-based architecture.
 sudo: false
