--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ addons:
     packages:
       # Travis is on 64bit and there will be a cryptic aapt error w/o these libs.
       # For native code tests, we need some additional libraries if we are in a 64-bit environment.
-      - libgd2-xpm
+      - libgd2-xpm-dev
       - libc6:i386
       - libstdc++6:i386
       - zlib1g:i386
