--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,9 +1,6 @@
-jdk:
-  - oraclejdk8
 install:
    - set -exo pipefail
    - ant
-   - bin/buck build buck
+   - PEX=$(bin/buck build buck --show-output | awk '{print $2}')
    - SHA=$(git rev-parse HEAD)
-   - PEX=$(bin/buck targets --show-output buck | awk '{print $2}')
    - mvn install:install-file -Dfile="$PEX" -DgroupId="$GROUP" -DartifactId="$ARTIFACT" -Dversion="$SHA" -Dpackaging="pex" -DgeneratePom=true
