Passing resolved kotlin compilation output path as classpath to javac instead of relative one

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 /.idea/uiDesigner.xml
 /.idea/workspace.xml
 /.idea/misc.xml
+/.idea/markdown*
 /.idea/copyright/profiles_settings.xml
 
 # From building Emma with Ant.
