--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: java
+language: android
 jdk:
   - oraclejdk8
 env:
@@ -13,9 +13,21 @@ dist: trusty
 # Enable container-based architecture.
 sudo: false
 
+android:
+  components:
+  - tools
+  - platform-tools
+  - build-tools-23.0.2
+  - android-23
+  - addon-google_apis-google-23
+  - android-21
+  - addon-google_apis-google-21
+  - extra-android-support
+
 addons:
   apt:
     packages:
+      - ant
       # Travis is on 64bit and there will be a cryptic aapt error w/o these libs.
       # For native code tests, we need some additional libraries if we are in a 64-bit environment.
       - libgd2-xpm-dev
@@ -38,8 +50,6 @@ before_install:
   # Set up the Android environment.
   - export NDK_HOME=${HOME}/android-ndk-linux
   - ./scripts/travisci_install_android_ndk.sh
-  - export ANDROID_HOME=${HOME}/android-sdk-linux
-  - ./scripts/travisci_install_android_sdk.sh
   # Install go 1.5
   - eval "$(gimme 1.5)"
   - echo -e "[go]\n  root = ${GOROOT}" >> .buckconfig.local
@@ -54,7 +64,6 @@ install: true
 cache:
   directories:
     - $HOME/ndk_cache
-    - $HOME/sdk_cache
 
 notifications:
   slack:
