--- a/.travis.yml
+++ b/.travis.yml
@@ -141,7 +141,7 @@ before_install:
     fi
   # Install go 1.8, required for cgo -srcdir flag to work
   - eval "$(gimme 1.8)"
-  - echo -e "[go]\n  root = ${GOROOT}" >> .buckconfig.local
+#  - echo -e "[go]\n  root = $(go env GOROOT)" >> .buckconfig.local
 
 # Buck dependencies are checked in, so no need to download dependencies
 install: true
