--- a/.travis.yml
+++ b/.travis.yml
@@ -139,9 +139,9 @@ before_install:
       export NDK_HOME="${HOME}/android-ndk-linux" ;
       ./scripts/travisci_install_android_ndk.sh ;
     fi
-  # Install go 1.8, required for cgo -srcdir flag to work
-  - eval "$(gimme 1.8)"
-#  - echo -e "[go]\n  root = $(go env GOROOT)" >> .buckconfig.local
+  # Install go 1.9, required for cgo -srcdir flag to work
+  - eval "$(gimme 1.9)"
+  - echo -e "[go]\n  root = ${GOROOT}" >> .buckconfig.local
 
 # Buck dependencies are checked in, so no need to download dependencies
 install: true
