--- a/build.xml
+++ b/build.xml
@@ -121,8 +121,8 @@
     <include name="jackson/jackson-datatype-guava-2.7.8.jar" />
     <include name="android/sdklib-25.3.0.jar" />
     <include name="nailgun/nailgun-server-0.9.3-SNAPSHOT.jar" />
-    <include name="jna/jna-4.4.0.jar" />
-    <include name="jna/jna-platform-4.4.0.jar" />
+    <include name="jna/jna-4.5.1.jar" />
+    <include name="jna/jna-platform-4.5.1.jar" />
     <include name="sqlite/sqlite-jdbc-3.20.0.jar" />
     <include name="bazel/skylark-lang_deploy.jar" />
     <include name="googleapis/googleapis.jar" />
@@ -171,6 +171,7 @@
     <include name="immutables/builder-2.5.7-SNAPSHOT.jar" />
     <include name="immutables/value-2.5.7-SNAPSHOT.jar" />
     <include name="infer-annotations/infer-annotations-4.1.jar" />
+    <include name="nuprocess/nuprocess-1.2.0.jar" />
     <include name="jacoco/org.jacoco.core-0.8.0.jar" />
     <include name="jacoco/org.jacoco.report-0.8.0.jar" />
     <include name="jdom/jdom-2.0.6.jar" />
