Update .c file name for cgo in Go 1.10

--- a/src/com/facebook/buck/features/go/testmaingen.go.in
+++ b/src/com/facebook/buck/features/go/testmaingen.go.in
@@ -468,6 +468,11 @@ func (testDeps) ImportPath() string {
 	return {{.ImportPath | printf "%q"}}
 }
 
+
+func (testDeps) StartTestLog(w io.Writer) {}
+
+func (testDeps) StopTestLog() error {return nil}
+
 {{if .CoverEnabled}}
 // Only updated by init functions, so no need for atomicity.
 var (
