--- a/.travis.yml
+++ b/.travis.yml
@@ -140,7 +140,7 @@ before_install:
       ./scripts/travisci_install_android_ndk.sh ;
     fi
   # Install go 1.10.x, which generates a different .c file name from cgo than previous versions
-  - eval "$(gimme 1.10.x)"
+  - eval "$(gimme 1.10.1)"
   - echo -e "[go]\n  root = ${GOROOT}" >> .buckconfig.local
 
 # Buck dependencies are checked in, so no need to download dependencies
