--- a/test/com/facebook/buck/jvm/scala/testdata/scala_test/.buckconfig
+++ b/test/com/facebook/buck/jvm/scala/testdata/scala_test/.buckconfig
@@ -1,3 +1,3 @@
 [scala]
-library = //:scala-library
-compiler = //:scala-compiler
+library = buck//third-party/scala:scala-library
+compiler = buck//third-party/scala:scala-compiler
